--- a/style.css
+++ b/style.css
@@ -1,28 +1,61 @@
 body {
-	font-family: Helvetica;
-	font-size: 48px;
-}
-
-.container {
-	max-width: 600px;
-	margin: 0 auto;
-}
-
-button{
-	height: 48px;
-	vertical-align: middle;
-}
-
-#emoji {
-	font-size: 48px;
-}
-
-form {
-	display:inline;
-
-}
-
-input[type="text"] {
-	height: 48px;
-	font-size:48px;
-}
+	font-family: 'Hammersmith One', sans-serif;
+	background-color :RGB(205, 235, 230);
+  }
+  h2 {
+	font-size: 200%;
+	background-color :RGB(153, 167, 238);
+	text-shadow: 2px 2px RGB(255, 255, 255);
+  }
+  h3 {
+	font-size: 130%;
+  }
+  p{
+	font-size: 110%;
+  }
+  
+  a:link {
+	  color: RGB(255, 20, 100);
+	  text-decoration: none;
+  }
+  
+  .button {
+	font-family: 'Hammersmith One', sans-serif;
+	border-radius: 4px;
+	background-color: RGB(153, 167, 238);
+	border: none;
+	color: RGB(255, 255, 255);
+	text-align: center;
+	font-size: 150%;
+	padding: 5px;
+	width: 200px;
+	transition: all 0.5s;
+	cursor: pointer;
+	margin: 5px;
+  }
+  .button span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+  }
+  .button span:after {
+	content: '»';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.5s;
+  }
+  
+  .button:hover span {
+	padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+	opacity: 1;
+	right: 0;
+  }
+  .tweet{
+	  background-color: RGB(255, 20, 100);
+  }
