--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
 	font-family: 'Hammersmith One', sans-serif;
-	background-color :#ffc8c8;
+	background-color :#ffe8c8;
   }
   h2 {
 	font-size: 200%;
 	background-color : #52a4ec;
-	text-shadow: 2px 2px #ff4961;
+	text-shadow: 2px 2px #ffffff;
   }
   h3 {
 	font-size: 130%;
